# HTTPServer-dashboard

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml
.github/workflows/: format.yml  matrix-builds.yml
backend/: CMakeLists.txt
backend/src/: config.toml  main.cpp
backend/src/auth/: auth.cpp  auth.h
backend/src/routes/: dispatcher.cpp  dispatcher.h  route.cpp  route.h  route_index.cpp  route_index.h  route_logs.cpp  route_logs.h  route_metrics.cpp  route_metrics.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Dashboard.tsx  index.css  types.ts
frontend/src/components/: Header.tsx  LegendItem.tsx  LoadingScreen.tsx  LogLine.tsx  LogViewer.tsx  LoginScreen.tsx  MetricCard.tsx  OverviewCharts.tsx  OverviewSummary.tsx  SquareCard.tsx  TabSelector.tsx  Tooltips.tsx
frontend/src/utils/: format.ts
scripts/: dashboard-server.service  deploy.sh  deploy_docker.sh
src/: auth.cpp  auth.h  config.toml  main.cpp
